Fix scrolling when side-dash overflows the app height

--- a/modules/portmaster/src/app/app.component.scss
+++ b/modules/portmaster/src/app/app.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   @apply bg-background;
+  @apply h-screen overflow-hidden;
 
   &>* {
     flex-shrink: 0;
