--- a/modules/portmaster/src/app/layout/side-dash/side-dash.scss
+++ b/modules/portmaster/src/app/layout/side-dash/side-dash.scss
@@ -6,5 +6,5 @@
   overflow: hidden;
   overflow-y: hidden;
 
-  @apply py-4;
+  @apply pt-4;
 }
